# Copyright 2015 The Athena Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "phosphorus"
version = "0.0.1"
authors = ["The Athena Developers"]
license = "Apache-2.0"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_text]
git = "https://github.com/PistonDevelopers/gfx_text"

[dependencies.jade]
git = "https://github.com/athena-org/jade-rs"
branch = "develop"

[dependencies.piston-gfx_texture]
git = "https://github.com/PistonDevelopers/gfx_texture"

# Dependencies for Examples

[dev-dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx_window_glutin"

[dev-dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dev-dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dev-dependencies.piston_window]
git = "https://github.com/PistonDevelopers/piston_window"

[dev-dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics"

[dev-dependencies.pistoncore-glutin_window]
git = "https://github.com/pistondevelopers/glutin_window"
