# Copyright 2015 The Athena Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "phosphorus"
version = "0.0.1"
authors = ["The Athena Developers"]
license = "Apache-2.0"

[dependencies]
cgmath = "0.2.0"
gfx = "0.6.4"
gfx_text = "0.4.0"
piston-gfx_texture = "0.1.0"

# [dependencies.jade] Not yet needed
# git = "https://github.com/athena-org/jade-rs"
# branch = "develop"

[dev-dependencies]
glutin = "0.1.6"
gfx_device_gl = "0.4.0"
gfx_window_glutin = "0.2.0"

# [dev-dependencies.piston]
# git = "https://github.com/PistonDevelopers/piston"

# [dev-dependencies.piston_window]
# git = "https://github.com/PistonDevelopers/piston_window"

# [dev-dependencies.piston2d-opengl_graphics]
# git = "https://github.com/PistonDevelopers/opengl_graphics"

# [dev-dependencies.pistoncore-glutin_window]
# git = "https://github.com/pistondevelopers/glutin_window"
